fixed text overflow prob in about sec on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -85,5 +85,12 @@ thead{
     #cover-caption {
         width: 100%;
     }
+
+    .about-section{
+
+        height: auto;
+
+    }
+
 }
 
